bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: not found: value Maths
  if(Maths.abs(100-n)<10 || Math.abs(200-n)<10){
     ^